# Arc

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  PLAN-memory-v2.1-implementation.md  README.md  arcagent.toml.example  coverage.json  identity.md  prompt-injection-audit.md  prompt-injection-defense-architecture.md  pyproject.toml
.claude/: decision-log.md  decisions-log.md  settings.local.json
.claude/brainstorms/: 2026-02-14-memory-module.md  2026-02-14-phase-2-codeexec.md  2026-02-14-phase1-technical-approach.md
.claude/builds/phase-2-codeexec/: decisions.md
.claude/commands/: build-arcrun.md
.claude/security/: cross-host-agent-security-note.md
.claude/specs/001-core-loop-react/: PRD.md  README.md  SDD.md
.claude/specs/002-tool-executor/: PRD.md
.claude/specs/003-codeexec/: PLAN.md
.claude/specs/S001-phase1-core/: PRD.md  coverage-analysis.md
.claude/specs/S002-memory-module/: README.md
.claude/specs/S003-phase1b-agent-runtime/: README.md
.claude/states/: arcrun.json
.claude/steering/: product.md  security.md  structure.md
.github/: PUBLISHING.md
.github/workflows/: ci.yml  publish-arcagent.yml  publish-arccli.yml  publish-arcllm.yml  publish-arcmas.yml  publish-arcmodel.yml  publish-arcprompt.yml  publish-arcrun.yml  publish-arcskill.yml  publish-arcstack.yml  publish-arcteam.yml  publish-arctui.yml  publish-arcui.yml
Basic_Agent/: arcagent.toml  demo.ipynb  run.py
Basic_Agent/workspace/: identity.md
arcagent/: __init__.py
arcagent/core/: agent.py  config.py  errors.py  protocols.py  tool_registry.py
arcagent/tools/: __init__.py  bash.py  edit.py  find.py  ls.py
arcagent/utils/: io.py
architecture/: tech-debt.json
architecture/adrs/: ADR-001-transport-implementation-deferral.md  ADR-002-arcrun-bridge-vs-wrapper.md  ADR-003-config-basesettings-vs-manual-overrides.md  ADR-004-core-loc-budget-increase.md  ADR-005-sync-filesystem-io-in-async-tools.md
brad_agent/: arcagent.toml
brad_agent/workspace/: context.md  identity.md
demo/: agent-detail.html  agents.html  arcrun.html  index.html  knowledge.html  messages.html  policy.html  security.html  settings.html  task-detail.html  tasks.html  telemetry.html  tools.html
demo-data/: SCRIPT.md
demo-data/sanitized/: cisco-nxos-01.demo.local.csv  paloalto-fw-01.demo.local.csv  win2019-app-01.demo.local.all-settings.html  win2019-app-01.demo.local.non-compliance.html
demo-extensions/: scap_tools.py
demo-extensions/agent-template/: identity.md  ui-reporter-snippet.toml
demo-extensions/scap/: __init__.py  _data.py  _state.py  crosswalk.py  evidence.py  ingest.py  models.py  sanitize.py  threat.py
demo-extensions/skill-knowledge/: SKILL.md
demo-extensions/skill-scap/: SKILL.md
demo/assets/: arc-platform.css  arc-shell.js
deploy/aws/: Caddyfile  DEPLOY.md  README.md  agents.enabled  arc-stack.service  deploy.sh  install.sh  main.yaml  parameters.json  setup-vm.sh
deploy/lib/: agent-manifest.sh
deploy/systemd/: arc.service
docs/: additional-features.md  agent-level-features.md  arcagent-design-v3.md  arcrun-PRD.md  cli.md  config-reference.md
docs/arcgateway/: getting-started.md  multi-instance 2.md  security.md
docs/deploy/: single-node.md  team-building.md
sbom/: SBOM.md  _facts.json  _gen_report.py  arc-python-env.cdx.json  arc-python.cdx.json  pip-audit.json  requirements-all.txt  requirements-gate.txt  requirements-nohash.txt  requirements-runtime.txt  security-suppressions.txt
scripts/: arc-stack.sh  bootstrap-scap-agent.sh  check_loc_budgets.py  coverage_report.py  demo-tunnel.sh  deploy-node.sh  deploy_node_overlays.py  install-scap-extension.sh  migrate_unhide_capabilities.py  playwright_live_audit.py  playwright_messaging_test.py  rehearse_demo.py  sanitize_demo_data.py  sync-scap-extension.sh  synth_drift.py  verify_demo.py
src/arcrun/: __init__.py  _messages.py  events.py  loop.py  registry.py  sandbox.py  state.py  types.py
team/: serve_demo.py
team/brad_agent/: arcagent.toml
tests/: conftest.py  test_code_strategy.py  test_events.py  test_execute_tool.py  test_executor.py  test_integration.py  test_loop.py  test_react.py  test_registry.py  test_sandbox.py  test_state.py  test_strategy_abc.py  test_strategy_selection.py
tests/integration/: test_self_extension.py  test_spec031_e2e.py  test_spec054_e2e.py  test_spec056_e2e.py
walkthrough/: 002-tool-executor.ipynb  003-codeexec.ipynb  01_core_use.ipynb
walkthroughs/: PLAN.md
walkthroughs/arcagent/: 01-first-agent.ipynb  02-tool-integration.ipynb  03-policy-and-modules.ipynb  04-module-bus-events.ipynb  05-blueprints-and-extensions.ipynb
walkthroughs/arcgateway/: 01-session-routing.ipynb  02-platform-adapters.ipynb
walkthroughs/arcllm/: 01-core-types.ipynb  02-config-loading.ipynb  03-anthropic-adapter.ipynb  04-agentic-loop.ipynb  05-openai-adapter.ipynb  06-provider-registry.ipynb  07-module-system.ipynb  08-rate-limiter.ipynb  09-telemetry-module.ipynb  10-audit-trail.ipynb  11-otel-export.ipynb  12-security-layer.ipynb  13-open-providers.ipynb  14-trace-store.ipynb  15-queue-circuit-breaker.ipynb  16-config-controller.ipynb  17-routing-module.ipynb
walkthroughs/arcrun/: 01-core-react.ipynb  02-tool-executor.ipynb  03-codeexec.ipynb  04-streaming.ipynb  05-parallel-dispatch.ipynb  06-task-completion-budgets.ipynb  07-event-chain-verification.ipynb
walkthroughs/arcskill/: 01-skill-self-improvement.ipynb
walkthroughs/arcteam/: 01-team-formation.ipynb  02-task-distribution.ipynb  03-messaging-channels.ipynb  04-team-persistence.ipynb
walkthroughs/arctrust/: 01-identity-did.ipynb  02-keypairs-signing.ipynb  03-policy-pipeline.ipynb  04-audit-sinks.ipynb
walkthroughs/arcui/: 01-dashboard-bringup.ipynb  02-live-telemetry-attach.ipynb
workspace/: travel_preferences.json
workspace/sessions/: 524a3c51-cbb1-489d-99dd-a72b34afc148.jsonl  91b3397e-8078-4557-9d15-6b423f9a7299.jsonl  a870c1d6-dd8a-49cf-a1ec-dae4420b5c21.jsonl  af43ce0a-d398-46e8-9477-86b8bc0aa974.jsonl  ec8f65e1-a219-4ceb-9141-d5408cfd309a.jsonl  eea09b64-9774-4ff7-a4d5-272ef0814d6a.jsonl
(+64 files in other folders)
