[project]
name = "arc"
version = "0.2.0"
description = "Arc: Autonomous agent framework"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "arc-agent",
    "arccmd",
    "arcgateway",
    "croniter>=6.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.8",
    "pip-audit>=2.7",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "types-pyyaml>=6.0.12.20260408",
    "types-croniter>=6.2.2.20260408",
    "freezegun>=1.5.5",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "faker>=37.0",
    "freezegun>=1.5.0",
    "tomlkit>=0.12",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
arcllm = { workspace = true }
arcrun = { workspace = true }
arcteam = { workspace = true }
arcmas = { workspace = true }
arccmd = { workspace = true, editable = true }
arc-agent = { workspace = true, editable = true }
arcgateway = { workspace = true, editable = true }

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "S", "T20", "RUF"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101", "S105", "S106", "E402", "S603"]
"**/walkthrough/**/*.ipynb" = ["S101", "B007", "S307", "S110", "T20", "F401", "E501", "F821", "E741"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--strict-markers -v"
