[project]
name = "arc"
version = "0.2.0"
description = "Arc: Autonomous agent framework"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "arc-agent",
    "arccmd",
    "arcgateway",
    # arcmemory ships in the default workspace env so scaffolded agents
    # (brain = "arcmemory") have a working Brain out of the box. arc-agent
    # itself keeps it optional (no static import); this is the deployment env.
    "arcmemory",
    # arcskill is the default skills adapter (skills.adapter = "arcskill" ->
    # arcskill.improver). Nothing else depends on it, so without this edge it is
    # only present under `uv sync --all-packages` and `arc ext verify` sees the
    # builtin adapter as unavailable in a default-synced env. Pin it here for the
    # same reason as arcmemory: the default extension must load out of the box.
    "arcskill",
    # arcgateway-telegram is the default remote gateway adapter — same reason
    # as arcmemory/arcskill: without this edge it's only present under
    # `uv sync --all-packages`, so a bare `uv sync` + an enabled
    # [platforms.telegram] block in gateway.toml starts a gateway with no
    # Telegram adapter (registry.build_adapters skips it, silently, at
    # personal/enterprise tier). Pin it here so it ships out of the box.
    "arcgateway-telegram",
    "croniter>=6.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.8",
    "pip-audit>=2.7",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "types-pyyaml>=6.0.12.20260408",
    "types-croniter>=6.2.2.20260408",
    "freezegun>=1.5.5",
    "python-dotenv>=1.2.2",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "faker>=37.0",
    "freezegun>=1.5.0",
    "tomlkit>=0.12",
]
# Tutorial / help-docs tooling — Jupyter notebook walkthroughs only. NOT part of
# the harness runtime closure and deliberately excluded from the CI security
# audit (which scopes to the runtime requirements export). Their transitive CVEs
# (jupyterlab, jupyter-server, tornado, bleach, msgpack) never ship in Arc.
tutorial = [
    "nbformat>=5.10.4",
    "jupyter>=1.1.1",
    "ipykernel>=7.2.0",
]

[tool.uv]
# Security floors for transitive runtime dependencies. These packages are pulled
# in indirectly (mcp, azure-core, boto3, docker, httpx, rich) and have no direct
# constraint to raise, so we pin the minimum patched version here. Each floor
# closes CVEs surfaced by the CI pip-audit gate; see sbom/security-suppressions.txt
# for anything that could NOT be floored.
constraint-dependencies = [
    "pyjwt>=2.13.0",          # PYSEC-2026-120/175/176/177/178/179 (via mcp[crypto], msal)
    "python-multipart>=0.0.31", # CVE-2026-40347/42561/53538/53539/53540 (via mcp)
    "requests>=2.33.0",       # CVE-2026-25645 (via azure-core, docker)
    "urllib3>=2.7.0",         # PYSEC-2026-141/142 (via botocore, requests)
    "idna>=3.15",             # PYSEC-2026-215 (via anyio/httpx)
    "pygments>=2.20.0",       # CVE-2026-4539 (via rich)
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
arcllm = { workspace = true }
arcrun = { workspace = true }
arcteam = { workspace = true }
arcmas = { workspace = true }
arctrust = { workspace = true }
arcstore = { workspace = true }
arcmemory = { workspace = true }
arcskill = { workspace = true }
arctui = { workspace = true }
arcui = { workspace = true }
arcprompt = { workspace = true }
arcmodel = { workspace = true }
arccmd = { workspace = true, editable = true }
arc-agent = { workspace = true, editable = true }
arcgateway = { workspace = true, editable = true }
arcgateway-telegram = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "A", "S", "T20", "RUF"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101", "S105", "S106", "E402", "S603"]
"scripts/**/*.py" = ["T201"]
# SBOM report generator: emits a wide-table markdown doc with unicode symbols
# (arrows, ×) and a status print — line-length/ambiguous-unicode/print lints
# do not apply to generated report content.
"sbom/_gen_report.py" = ["E501", "RUF001", "T201"]
"walkthroughs/**/*.ipynb" = ["S101", "B007", "S307", "S110", "T20", "F401", "F811", "E501", "F821", "E741", "E402", "I001", "S603", "S108", "A002"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
# Skill payload scripts ship inside skill bundles (not importable package
# modules); several share a filename (e.g. validate.py), which collides under
# mypy's module resolution. They are not part of the typed package surface.
exclude = '/skills/[^/]+/scripts/'

# Optional third-party dependencies without type stubs. These are guarded by
# runtime import checks and only pulled in via extras (otel/aws/docker/schema).
[[tool.mypy.overrides]]
module = [
    "jsonschema",
    "jsonschema.*",
    "boto3",
    "boto3.*",
    "botocore",
    "botocore.*",
    "docker",
    "docker.*",
    "dateparser",
    "dateparser.*",
    "azure.*",
    "opentelemetry.exporter.otlp.*",
    "sqlite_vec",
    "sqlite_vec.*",
    "sentence_transformers",
    "sentence_transformers.*",
    "slack_bolt",
    "slack_bolt.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# The Slack integration's @app.event handlers are decorated by the stub-less
# optional slack_bolt lib (its decorators resolve to Any), so strict
# untyped-decorator checks don't apply to this optional-dependency module.
module = ["arcagent.modules.slack.bot"]
disallow_untyped_decorators = false
# slack_bolt has no stubs: connect_async is untyped when [slack] is installed
# (needs a per-call ignore), but resolves to Any when it is not (ignore unused).
# Don't warn on the ignore in the extra-absent env.
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--strict-markers -v"
markers = [
    "slow: end-to-end test that starts a real nats-server (skipped when the binary is absent)",
]
